# KiloElfLoader-testing

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
src/: kbelfx.c  main.c
test/: Makefile
test/barebones/: Makefile  barebones.c
test/lib0/: Makefile  lib0.c
test/libstub0/: Makefile  libstub0.c
